// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/songs/ChartDetail.vue { locale: en } snapshot test { loading: false, scores: [...] } renders score list 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> Score <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class=""><span class="is-size-7">0</span></td>
                      <td data-label="Score" class="has-text-centered">
                        <scorebadge-stub lamp="7" score="1000000"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">414</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class=""><span class="is-size-7">13</span></td>
                      <td data-label="Score" class="has-text-centered">
                        <scorebadge-stub lamp="6" score="999950"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">409</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class=""><a class="is-size-7">
                          Public User
                        </a></td>
                      <td data-label="Score" class="has-text-centered">
                        <scorebadge-stub lamp="6" score="999950"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">409</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="Name" class=""><a class="is-size-7">
                          Private User
                        </a></td>
                      <td data-label="Score" class="has-text-centered">
                        <scorebadge-stub lamp="6" score="999930"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">409</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <!---->
                  </tbody>
                  <!---->
                </table>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer">
          <!---->
          <!----> <a class="card-footer-item">
            Show All
          </a>
        </footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: en } snapshot test { loading: false, scores: [] } renders empty 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> Score <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="3">
                        <section class="section">
                          <div class="content has-text-grey has-text-centered">
                            <p>No Data</p>
                          </div>
                        </section>
                      </td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer">
          <!---->
          <!----> <a class="card-footer-item">
            Show All
          </a>
        </footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: en } snapshot test { loading: true } renders loading spin 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> Score <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="3">
                        <section class="section">
                          <div class="content has-text-grey has-text-centered">
                            <p>No Data</p>
                          </div>
                        </section>
                      </td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
                <transition-stub name="fade">
                  <div class="loading-overlay is-active">
                    <div class="loading-background"></div>
                    <div class="loading-icon"></div>
                  </div>
                </transition-stub>
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer">
          <!---->
          <!----> <a class="card-footer-item">
            Show All
          </a>
        </footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: en } snapshot test renders edit button if loggedIn 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> Score <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="3">
                        <section class="section">
                          <div class="content has-text-grey has-text-centered">
                            <p>No Data</p>
                          </div>
                        </section>
                      </td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
                <transition-stub name="fade">
                  <div class="loading-overlay is-active">
                    <div class="loading-background"></div>
                    <div class="loading-icon"></div>
                  </div>
                </transition-stub>
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer"><a class="card-footer-item">
            Edit
          </a> <a class="card-footer-item">
            Import
          </a> <a class="card-footer-item">
            Show All
          </a></footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: ja } snapshot test { loading: false, scores: [...] } renders score list 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> ユーザー名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> スコア <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="ユーザー名" class=""><span class="is-size-7">0</span></td>
                      <td data-label="スコア" class="has-text-centered">
                        <scorebadge-stub lamp="7" score="1000000"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">414</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="ユーザー名" class=""><span class="is-size-7">13</span></td>
                      <td data-label="スコア" class="has-text-centered">
                        <scorebadge-stub lamp="6" score="999950"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">409</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="ユーザー名" class=""><a class="is-size-7">
                          Public User
                        </a></td>
                      <td data-label="スコア" class="has-text-centered">
                        <scorebadge-stub lamp="6" score="999950"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">409</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <tr draggable="false" class="">
                      <!---->
                      <!---->
                      <td data-label="ユーザー名" class=""><a class="is-size-7">
                          Private User
                        </a></td>
                      <td data-label="スコア" class="has-text-centered">
                        <scorebadge-stub lamp="6" score="999930"></scorebadge-stub>
                      </td>
                      <td data-label="EX" class="has-text-right"><span class="is-size-7">409</span></td>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                    <!---->
                  </tbody>
                  <!---->
                </table>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer">
          <!---->
          <!----> <a class="card-footer-item">
            全件表示
          </a>
        </footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: ja } snapshot test { loading: false, scores: [] } renders empty 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> ユーザー名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> スコア <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="3">
                        <section class="section">
                          <div class="content has-text-grey has-text-centered">
                            <p>データがありません</p>
                          </div>
                        </section>
                      </td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer">
          <!---->
          <!----> <a class="card-footer-item">
            全件表示
          </a>
        </footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: ja } snapshot test { loading: true } renders loading spin 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> ユーザー名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> スコア <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="3">
                        <section class="section">
                          <div class="content has-text-grey has-text-centered">
                            <p>データがありません</p>
                          </div>
                        </section>
                      </td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
                <transition-stub name="fade">
                  <div class="loading-overlay is-active">
                    <div class="loading-background"></div>
                    <div class="loading-icon"></div>
                  </div>
                </transition-stub>
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer">
          <!---->
          <!----> <a class="card-footer-item">
            全件表示
          </a>
        </footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue { locale: ja } snapshot test renders edit button if loggedIn 1`] = `
<section>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="SP-BEGINNER (4)" class="card-header is-beginner">
        <div class="card-header-title">SP-BEGINNER (4)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="SP-BEGINNER (4)" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="table-container">
            <div class="b-table">
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="table-wrapper">
                <table class="table is-striped is-narrow">
                  <thead>
                    <tr>
                      <!---->
                      <!---->
                      <th class="">
                        <div class="th-wrap"><span class="is-relative"> ユーザー名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-centered"><span class="is-relative"> スコア <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <th class="">
                        <div class="th-wrap is-numeric"><span class="is-relative"> EX <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
                      </th>
                      <!---->
                    </tr>
                    <!---->
                    <!---->
                  </thead>
                  <tbody>
                    <tr class="is-empty">
                      <td colspan="3">
                        <section class="section">
                          <div class="content has-text-grey has-text-centered">
                            <p>データがありません</p>
                          </div>
                        </section>
                      </td>
                    </tr>
                  </tbody>
                  <!---->
                </table>
                <transition-stub name="fade">
                  <div class="loading-overlay is-active">
                    <div class="loading-background"></div>
                    <div class="loading-icon"></div>
                  </div>
                </transition-stub>
              </div>
              <!---->
            </div>
          </div>
        </div>
        <footer class="card-footer"><a class="card-footer-item">
            編集
          </a> <a class="card-footer-item">
            インポート
          </a> <a class="card-footer-item">
            全件表示
          </a></footer>
      </div>
    </transition-stub>
  </div>
  <div class="collapse card">
    <div class="collapse-trigger">
      <header role="button" aria-controls="Chart Info" class="card-header is-beginner">
        <div class="card-header-title">Chart Info</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
      </header>
    </div>
    <transition-stub name="slide">
      <div id="Chart Info" class="collapse-content" style="display: none;">
        <div class="card-content">
          <div class="content">
            <ul>
              <li><em>Notes</em>: 138</li>
              <li><em>Freeze Arrow</em>: 0</li>
              <li><em>Shock Arrow</em>: 0</li>
            </ul>
          </div>
          <div class="table-container">
            <table class="table">
              <thead>
                <tr>
                  <th><abbr title="STREAM">STR</abbr></th>
                  <th><abbr title="VOLTAGE">VOL</abbr></th>
                  <th>AIR</th>
                  <th><abbr title="FREEZE">FRE</abbr></th>
                  <th><abbr title="CHAOS">CHA</abbr></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>29</td>
                  <td>22</td>
                  <td>5</td>
                  <td>0</td>
                  <td>0</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</section>
`;

exports[`/components/pages/songs/ChartDetail.vue fetchScores sets { locale: en } areaName 1`] = `
Array [
  Object {
    "clearLamp": 7,
    "exScore": 414,
    "isArea": true,
    "score": 1000000,
    "userId": "0",
    "userName": "World Top",
  },
  Object {
    "clearLamp": 6,
    "exScore": 409,
    "isArea": true,
    "score": 999950,
    "userId": "13",
    "userName": "Tokyo Top",
  },
  Object {
    "clearLamp": 6,
    "exScore": 409,
    "score": 999950,
    "userId": "public_user",
    "userName": "Public User",
  },
  Object {
    "clearLamp": 6,
    "exScore": 409,
    "score": 999930,
    "userId": "private_user",
    "userName": "Private User",
  },
]
`;

exports[`/components/pages/songs/ChartDetail.vue fetchScores sets { locale: ja } areaName 1`] = `
Array [
  Object {
    "clearLamp": 7,
    "exScore": 414,
    "isArea": true,
    "score": 1000000,
    "userId": "0",
    "userName": "全国トップ",
  },
  Object {
    "clearLamp": 6,
    "exScore": 409,
    "isArea": true,
    "score": 999950,
    "userId": "13",
    "userName": "東京都トップ",
  },
  Object {
    "clearLamp": 6,
    "exScore": 409,
    "score": 999950,
    "userId": "public_user",
    "userName": "Public User",
  },
  Object {
    "clearLamp": 6,
    "exScore": 409,
    "score": 999930,
    "userId": "private_user",
    "userName": "Private User",
  },
]
`;
